--- a/package.json
+++ b/package.json
@@ -25,10 +25,19 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@mui/material": "^5.11.9",
+    "axios": "^1.3.2",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-button": "^0.7.2",
-    "react-router-dom": "^6.8.0"
+    "react-material-ui-form-validator": "^3.0.1",
+    "react-otp-input": "^2.4.0",
+    "react-router-dom": "^6.8.0",
+    "react-toastify": "^9.1.1"
   }
 }
