--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-google-button": "^0.7.2",
     "react-material-ui-form-validator": "^3.0.1",
     "react-otp-input": "^2.4.0",
+    "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.8.0",
     "react-toastify": "^9.1.1"
   }
