--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack serve --mode development",
-    "test": "test"
+    "test": "test",
+    "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start",
+    "install:peer-deps": "npm install --legacy-peer-deps"
   },
   "author": "James Masika",
   "license": "ISC",
@@ -21,7 +23,10 @@
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.7.2",
     "postcss-loader": "^7.0.2",
+    "sass": "^1.58.3",
+    "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
+    "svg-url-loader": "^8.0.0",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
@@ -31,16 +36,31 @@
     "@emotion/styled": "^11.10.5",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
+    "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.9",
+    "@mui/x-data-grid": "^5.17.24",
     "axios": "^1.3.2",
+    "chart.js": "^4.2.1",
+    "chroma-js": "^2.4.2",
+    "jsconfig-to-webpack-alias": "^1.0.1",
     "path": "^0.12.7",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-circular-progressbar": "^2.1.0",
+    "react-countup": "^6.4.1",
     "react-dom": "^18.2.0",
+    "react-flatpickr": "^3.10.13",
     "react-google-button": "^0.7.2",
     "react-material-ui-form-validator": "^3.0.1",
     "react-otp-input": "^2.4.0",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.8.0",
-    "react-toastify": "^9.1.1"
+    "react-toastify": "^9.1.1",
+    "recharts": "^2.4.3",
+    "stylis": "^4.1.3",
+    "stylis-plugin-rtl": "^2.1.1",
+    "uuid": "^9.0.0",
+    "web-vitals": "^3.1.1"
   }
 }
