--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.9",
     "@mui/x-data-grid": "^5.17.24",
-    "axios": "^1.3.2",
+    "axios": "^1.3.4",
     "chart.js": "^4.2.1",
     "chroma-js": "^2.4.2",
     "jsconfig-to-webpack-alias": "^1.0.1",
@@ -52,9 +52,11 @@
     "react-dom": "^18.2.0",
     "react-flatpickr": "^3.10.13",
     "react-google-button": "^0.7.2",
+    "react-html5video": "^2.5.1",
     "react-material-ui-form-validator": "^3.0.1",
     "react-otp-input": "^2.4.0",
     "react-phone-input-2": "^2.15.1",
+    "react-player": "^2.11.2",
     "react-router-dom": "^6.8.0",
     "react-toastify": "^9.1.1",
     "recharts": "^2.4.3",
