--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
+    "@blueprintjs/core": "^4.16.3",
+    "@blueprintjs/datetime": "^4.4.18",
+    "@blueprintjs/datetime2": "^0.9.16",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@material-ui/core": "^4.12.4",
@@ -53,6 +56,7 @@
     "react-flatpickr": "^3.10.13",
     "react-google-button": "^0.7.2",
     "react-html5video": "^2.5.1",
+    "react-icons": "^4.7.1",
     "react-material-ui-form-validator": "^3.0.1",
     "react-otp-input": "^2.4.0",
     "react-phone-input-2": "^2.15.1",
