--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-phone-input-2": "^2.15.1",
     "react-player": "^2.11.2",
     "react-router-dom": "^6.8.0",
+    "react-spring": "^9.7.1",
     "react-toastify": "^9.1.1",
     "recharts": "^2.4.3",
     "stylis": "^4.1.3",
