--- a/package.json
+++ b/package.json
@@ -58,13 +58,17 @@
     "react-html5video": "^2.5.1",
     "react-icons": "^4.7.1",
     "react-material-ui-form-validator": "^3.0.1",
+    "react-modal": "^3.16.1",
     "react-otp-input": "^2.4.0",
     "react-phone-input-2": "^2.15.1",
     "react-player": "^2.11.2",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.0",
     "react-spring": "^9.7.1",
     "react-toastify": "^9.1.1",
     "recharts": "^2.4.3",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "stylis": "^4.1.3",
     "stylis-plugin-rtl": "^2.1.1",
     "uuid": "^9.0.0",
