--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-toastify": "^9.1.1",
     "recharts": "^2.4.3",
     "redux": "^4.2.1",
+    "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
     "stylis": "^4.1.3",
     "stylis-plugin-rtl": "^2.1.1",
